Update styles and add new images

--- a/assets/css/global/_global.scss
+++ b/assets/css/global/_global.scss
@@ -110,6 +110,9 @@ body{
   padding: 8px;
   background-color: white;
   z-index: 99999;
+  @include md{
+  height: 60px;
+  }
   @include shadow();
   &__wrap{
       width: 100%;
@@ -153,7 +156,6 @@ background-color: #fafafa;
           justify-content: start;
       }
       li{
-          border-bottom: 1px gray dotted;
           a{
               padding-left: 16px;
               padding-top: 16px;
