--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,6 +64,11 @@ body section {
   z-index: 99999;
   box-shadow: 0px 0px 15px -5px #777777;
 }
+@media screen and (max-width: 768px) {
+  .nav {
+    height: 60px;
+  }
+}
 .nav__wrap {
   width: 100%;
   display: flex;
@@ -112,9 +117,6 @@ body section {
   justify-content: center;
   align-items: center;
   justify-content: start;
-}
-.drawer-nav ul li {
-  border-bottom: 1px gray dotted;
 }
 .drawer-nav ul li a {
   padding-left: 16px;
@@ -340,6 +342,97 @@ button a {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.nav__wrap .logo {
+  height: auto;
+}
+.nav__wrap .logo img {
+  height: 40px;
+}
+.nav__wrap .menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+}
+.nav__wrap .menu ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+}
+.nav__wrap .menu .login {
+  padding: 8px 16px;
+  border-radius: 100px;
+  background-color: #F07884;
+  color: white;
+}
+.nav__wrap .menu .login span {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+}
+.nav__wrap .menu .login span::before {
+  font: var(--fa-font-solid);
+  content: "\f090";
+  color: white;
+  font-size: clamp(1.2rem, 1.1346938776rem + 0.2040816327vw, 1.4rem);
+}
+.nav__sp {
+  justify-content: space-between;
+  align-items: center;
+}
+.nav__sp .logo {
+  z-index: 99999;
+}
+.nav__sp .logo img {
+  height: 35px;
+}
+.nav .nav-inner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+.nav .nav-inner ul {
+  width: 100%;
+  padding-top: 60px;
+}
+.nav .nav-inner ul li {
+  border-bottom: 1px #004C71 dotted;
+}
+.nav .nav-inner ul li:first-child {
+  border-top: 1px #004C71 dotted;
+}
+.nav .nav-inner ul li a::after {
+  font: var(--fa-font-solid);
+  content: "\f105";
+  font-size: clamp(1.6rem, 1.5346938776rem + 0.2040816327vw, 1.8rem);
+  color: #004C71;
+}
+.nav .nav-inner .login {
+  padding: 8px 16px;
+  border-radius: 100px;
+  background-color: #F07884;
+  color: white;
+  margin-bottom: 100px;
+  width: 90%;
+}
+.nav .nav-inner .login span {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+}
+.nav .nav-inner .login span::before {
+  font: var(--fa-font-solid);
+  content: "\f090";
+  color: white;
+  font-size: clamp(1.2rem, 1.1346938776rem + 0.2040816327vw, 1.4rem);
 }
 
 main .kv {
@@ -610,6 +703,7 @@ main .mainTitle {
   main .mainTitle {
     font-size: clamp(2.5rem, 2.4346938776rem + 0.2040816327vw, 2.7rem);
     letter-spacing: normal;
+    margin-bottom: 16px;
   }
 }
 main .feature {
@@ -777,8 +871,11 @@ main .oaite .oaite__wrap .box .image {
 main .oaite .oaite__wrap .box .image img {
   max-width: 250px;
   width: 100%;
-  height: auto;
+  height: 100%;
   border-radius: 8px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  aspect-ratio: 1/1;
 }
 main .oaite .oaite__wrap .box .info {
   position: absolute;
@@ -847,25 +944,30 @@ main .cv {
   justify-content: center;
   align-items: center;
   min-height: 120px;
-  flex-direction: column;
   gap: 16px;
   padding: 40px 0px;
 }
-main .cv .catch {
+main .cv__wrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+main .cv__wrap .catch {
   text-align: center;
   font-weight: bold;
   color: #004C71;
   margin-bottom: 16px;
 }
-main .cv button {
+main .cv__wrap button {
   width: 50%;
 }
 @media screen and (max-width: 768px) {
-  main .cv button {
+  main .cv__wrap button {
     width: 100%;
   }
 }
-main .cv button a {
+main .cv__wrap button a {
   font-weight: bold;
 }
 main .merit__wrap {
