--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -373,6 +373,7 @@ button a {
   justify-content: center;
   align-items: center;
   gap: 8px;
+  color: white;
 }
 .nav__wrap .menu .login span::before {
   font: var(--fa-font-solid);
