--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -428,6 +428,7 @@ button a {
   justify-content: center;
   align-items: center;
   gap: 8px;
+  color: white;
 }
 .nav .nav-inner .login span::before {
   font: var(--fa-font-solid);
