--- a/assets/css/global/_global.scss
+++ b/assets/css/global/_global.scss
@@ -1,6 +1,14 @@
+$mc: #004C71;
+$pink: #F07884;
+$green: #706C00;
+$lb: #EAF2F4;
+
+$lciq: #F6AB00;
+
 $brown: #bb9e52;
 $green: #80b567;
 $black: #0f0f0f;
+
 $gray: lighten($black, 40%);
 $lightgray: lighten($black, 90%);
 $gosic: system-ui;
@@ -56,7 +64,7 @@ body{
         color: $black;
         :hover{
             @include transition();
-            opacity: 0.8;
+            opacity: 0.5;
         }
     }
     img{
@@ -90,108 +98,93 @@ body{
   opacity: 1;
 }
 
-#navigation {
-  opacity: 0;
-  visibility: hidden; /* 見えなくするが、スペースを維持 */
-  transition: opacity 0.5s ease-in-out;
+
+
+
+@import url(https://use.typekit.net/lpz2crc.css);
+// font-family: "mina", serif;
+// font-weight: 400;
+// font-style: normal;
+
+
+
+@mixin dotBg{
+    background-color: $lb;
+    background-image:
+    radial-gradient(white 30%, transparent 30%);
+    background-size: 20px 20px;
 }
 
-#navigation.visible {
-  opacity: 1;
-  visibility: visible; /* 表示状態 */
-  transition: opacity 0.5s ease-in-out;
+html{
+    /*IE(Internet Explorer)・Microsoft Edgeへの対応*/
+    -ms-overflow-style: none;
+    /*Firefoxへの対応*/
+    scrollbar-width: none;
+    /*Google Chrome、Safariへの対応*/
+    &::-webkit-scrollbar{
+        display: none;
+    } 
 }
 
-.nav{
-  position: fixed;
-  top: 0;
+
+a{
+    text-decoration: none;
+}
+
+
+button{
+  background-color: $mc;
+  border: unset;
+  box-shadow: unset;
+  border-radius: 100px;
   width: 100%;
-  height: 80px;
-  padding: 8px;
-  background-color: white;
-  z-index: 99999;
-  @include md{
-  height: 60px;
+  transition: background-color 0.3s ease; 
+  &:hover {
+      background-color:lighten($mc, 10%);
   }
-  @include shadow();
-  &__wrap{
+  a{
       width: 100%;
+      color: white;
+      text-decoration: none;
+      padding: 8px;
       @include flex();
-      justify-content: space-between;
-      .logo{
-          img{
-              height: 50px;
-              @include sp{
-                  height: 30px;
-              }
-              
-          }
+  }
+}
+
+
+[data-color="blue"]{
+  transition: background-color 0.3s ease, color 0.3s ease, border 0.3s ease;
+  &:hover{
+      background-color: $mc !important;
+      border: unset !important;
+      color: white !important;
+      opacity: 1;
+      * {
+          color: inherit !important;
       }
-      .menu{
-          @include flex();
-          gap: 16px;
-          @include sp{
-              display: none;
-          }
+      &::before,
+      &::after {
+          color: inherit !important; // 疑似要素にも継承を明示
       }
   }
 }
 
-.drawer-hamburger{
-  top: unset;
-  width: 30px;
-  display: none;
-  @include sp{
-      display: block;
-  }
-}
-
-.drawer-nav{
-background-color: #fafafa;
-  ul{
-      .logo{
-          padding-left: 10px;
-          height: 80px;
-          @include flex();
-          justify-content: start;
+[data-color="pink"]{
+  transition: background-color 0.3s ease, color 0.3s ease, border 0.3s ease;
+  &:hover{
+      background-color: $pink !important;
+      border: unset !important;
+      color: white !important;
+      opacity: 1;
+      * {
+          color: inherit !important;
       }
-      li{
-          a{
-              padding-left: 16px;
-              padding-top: 16px;
-              padding-right: 8px;
-              padding-bottom: 16px;
-              display: block;
-              width: 100%;
-              @include flex();
-              justify-content: space-between;
-              &::after{
-                  content: '';
-                  width: 10px;
-                  height: 10px;
-                  display: inline-block;
-                  background-repeat: no-repeat;
-              }
-              &:hover{
-                  background-color: white;
-                  text-decoration: none;
-                  color: black;
-              }
-          }
+      &::before,
+      &::after {
+          color: inherit !important; // 疑似要素にも継承を明示
       }
   }
 }
 
-/* ナビの背景を前面に出す */
-.drawer--right.drawer-open .drawer-nav{
-  width: 100%;
-}
 
-/* アイコンの位置 */
-.drawer--right.drawer-open .drawer-hamburger{
-  right:0;
-}
 
-body{
-  line-height: normal;
-}
