--- a/assets/css/pages/_mypage.scss
+++ b/assets/css/pages/_mypage.scss
@@ -113,22 +113,24 @@
                     }
                 }
                 .lciq{
-                    grid-area: lciq;
                     @include md{
+                    grid-area: lciq;
                     border-right: 1px white solid;
                     }
                 }
                 .like{
-                    grid-area: like;
+                    @include md{
+                        grid-area: like;
+                    }
                     i{
                         color: g.$pink;
                         margin-right: 4px;
                     }
                 }
                 .prof{
-                    grid-area: prof;
                     @include md{
                     border-top: 1px white solid;
+                    grid-area: prof;
                     }
                     .numb{
                         @include flex();
