--- a/assets/css/pages/_mypage.scss
+++ b/assets/css/pages/_mypage.scss
@@ -39,7 +39,9 @@
                 }
                 button{
                     color: white;
-                    padding: 8px;
+                    a{
+                        padding: 8px;
+                    }
                 }
             }
         }//profile
